--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<!DOCTYPE html>
-<html>
-    <head>
+<!Doctype html>
+<html lang="en-us">
 
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>Project 1</title>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <!-- favicon -->
 
 
+    <!-- title -->
+    <header>
+        <p id="title">video/image/gif searcher</p>
+    </header>
 
+</head>
 
+<body>
+    <div class="container">
 
-
-        
-    </body>
-</html>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.9.7/d3.min.js"></script>
+    <script src="assets/javascript/main.js" type="text/javascript"></script>
+</body>
