added icon to search button
cute knife and fork

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
     integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
 
+  <!-- font awesome link to display icon in the search button -->
+  <script src="https://kit.fontawesome.com/65129cc130.js"></script>
 
 </head>
 
@@ -100,7 +102,7 @@
                 </label>
               </div> -->
 
-          <button type="search"  class="btn btn-success pure-button mb-2"><i class="fa fa-utensils"></i>Search</button>
+          <button type="search" class="btn btn-success pure-button mb-2"><i class="fa fa-utensils"></i>Search</button>
         </form>
       </div>
     </nav>
