added google code, to be able to use google maps

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- font awesome link to display icon in the search button -->
   <script src="https://kit.fontawesome.com/65129cc130.js"></script>
-
+<meta name="google-site-verification" content="eCraO6NNGMDX_-lsnWdZmkn-n1OC7-s0eVkhjw8L5rU" />
 </head>
 
 <body>
