--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   <!-- font awesome link to display icon in the search button -->
   <script src="https://kit.fontawesome.com/65129cc130.js"></script>
 <meta name="google-site-verification" content="eCraO6NNGMDX_-lsnWdZmkn-n1OC7-s0eVkhjw8L5rU" />
+  
+  <!-- script to load google maps javascript API -->
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key= AIzaSyBHJoUICa4QltXCnuuyI92Q9RXeJUzUJ4M&callback=initMap">
+</script>
 </head>
 
 <body>
