--- a/index2.html
+++ b/index2.html
@@ -41,7 +41,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container">
-            <a class="navbar-brand" href="#">Famished</a>
+            <a class="navbar-brand white-text" href="#">Famished</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle white-text" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Menu
                         </a>
@@ -74,7 +74,7 @@
         <div class="jumbotron text-center bg-transparent" id="home">
 
             <!-- Title -->
-            <h2 class="card-title h2">Welcome to Famished!</h2>
+            <h2 class="white-text card-title h2">Welcome to Famished!</h2>
             <!-- Subtitle -->
             <p class="white-text my-4 font-weight-bold">Your desitination for food you prefer</p>
 
@@ -84,7 +84,7 @@
                 <!-- Grid column -->
                 <div class="col-xl-7 pb-2">
 
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aliquid dolorem
+                    <p class="card-text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aliquid dolorem
                         ea distinctio exercitationem delectus qui, quas eum architecto, amet quasi accusantium, fugit
                         consequatur ducimus obcaecati numquam molestias hic itaque accusantium doloremque laudantium,
                         totam rem aperiam.</p>
