--- a/index.html
+++ b/index.html
@@ -2,155 +2,287 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Project 1</title>
-  <!-- jquery -->
-  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
-  <!-- reset css-->
-  <link rel="stylesheet" href="assets/css/reset.css">
+    <meta charset="UTF-8">
+    <title>Project 1</title>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
-  <!-- bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-  <!-- Material Design Bootstrap -->
-  <link href="css/mdb.min.css" rel="stylesheet">
-  <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="assets/images/cute cherries.png">
-   
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <!-- Pure.css new library to try -->
-  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
-    integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
 
-  <!-- font awesome link to display icon in the search button -->
-  <script src="https://kit.fontawesome.com/65129cc130.js"></script>
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="assets/images/cute cherries.png">
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
-<meta name="google-site-verification" content="eCraO6NNGMDX_-lsnWdZmkn-n1OC7-s0eVkhjw8L5rU" />
-  
-  <!-- script to load google maps javascript API -->
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key= AIzaSyBHJoUICa4QltXCnuuyI92Q9RXeJUzUJ4M&callback=initMap">
-</script>
+    <!-- Pure.css new library to try -->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
+        integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+
+    <!-- font awesome link to display icon in the search button -->
+    <script src="https://kit.fontawesome.com/65129cc130.js"></script>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+
 
 </head>
 
-<body data-spy="scroll" data-target="#navbar-example">
+<body>
 
-   <div class="container"> 
-    <!-- navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
-      <!-- add id to href to name of app -->
-      <a class="navbar-brand" href="#">Famished</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- may move search form for food prefrence -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <div class="container">
+            <a class="navbar-brand white-text" href="#">Famished</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-        <form class="form-inline">
-
-          <!-- Calorie Counter -->
-            <div class="d-flex justify-content-center my-4">
-                <!-- <label for="customRange3" class="text-white bg-dark">Calorie Range</label> -->
-                <span class="font-weight-bold indigo-text mr-2 mt-1">100</span>
-                <form class="range-field w-25">
-                  <input class="border-0" type="range" min="100" max="5000" />
-                </form>
-                <span class="font-weight-bold indigo-text ml-2 mt-1">5000</span>
-              </div>
-          
-
-          <!-- Food custom search bar -->
-
-          <div class="w-25 p-3">
-          <label for="customRange3" class="text-white bg-success">Calorie Range</label>
-          <input type="range" class="custom-range" min="100" max="5000" step="0.5" id="customRange3">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle white-text" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Menu
+                        </a>
+                        <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
+                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Home</a>
+                            <a class="dropdown-item" href="#">Food Filter</a>
+                            <a class="dropdown-item" href="#">Locations</a>
+                            <div class="dropdown-divider"></div>
+                            <!-- May want to add a 'Favorites option' -->
+                            <!-- <a class="dropdown-item" href="#">Favorites</a> -->
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-          <select class="diet my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-              <option selected>Choose...</option>
-              <option value="Gluten Free">Gluten Free</option>
-              <option value="Vegan">Vegan</option>
-              <option value="Nut Free">Nut Free</option>
-              <option value="Keto Friendly">Keto Friendly</option>
-            </select>
-
-          <label class="sr-only" for="inlineFormInputName2">Food</label>
-          <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Food">
-
-          <!-- need to make zip code text field 25% width -->
-          <label class="sr-only" for="inlineFormInputGroupUsername2">zip code</label>
-          <div class="input-group mb-2 mr-sm-2">
-            <!-- <div class="input-group-prepend">
-                  <div class="input-group-text"></div>
-                </div> -->
-            <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Zip Code">
-          </div>
-
-
-
-          <button type="search" class="btn btn-success pure-button mb-2"><i class="fa fa-utensils"></i>Search</button>
-        </form>
-      </div>
     </nav>
-  </div> 
 
-  <!-- main content of page -->
-  <div class="container">
-    <div class="card border-0 shadow my-5">
-      <div class="card-body p-5">
-        <div class="card-deck">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Panel title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-          <!--Card-->
-          <div class="card card-cascade narrower">
-            <!--Card image-->
-            <div class="view view-cascade gradient-card-header peach-gradient">
-              <h5 class="mb-0">Custom map</h5>
-            </div>
-            <!--Card content-->
-            <div class="card-body card-body-cascade text-center">
-              <!--Google map-->
-              <div id="map-container-google-9" class="z-depth-1-half map-container-5" style="height: 300px">
-                <iframe src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                  style="border:0" allowfullscreen></iframe>
-              </div>
-            </div>
-          </div>
+    <div class="container text-center">
+        <!-- Jumbotron -->
+        <div class="jumbotron text-center bg-transparent" id="home">
 
-          <div style="height: 700px"></div>
+            <!-- Title -->
+            <h2 class="white-text card-title h2">Welcome to Famished!</h2>
+            <!-- Subtitle -->
+            <p class="white-text my-4 font-weight-bold">Your desitination for food you prefer</p>
 
-          <p class="lead mb-0"></p>
+            <!-- Grid row -->
+            <div class="row d-flex justify-content-center">
+
+                <!-- Grid column -->
+                <div class="col-xl-7 pb-2">
+
+                    <p class="card-text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aliquid
+                        dolorem
+                        ea distinctio exercitationem delectus qui, quas eum architecto, amet quasi accusantium, fugit
+                        consequatur ducimus obcaecati numquam molestias hic itaque accusantium doloremque laudantium,
+                        totam rem aperiam.</p>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+            <hr class="my-4">
+
+            <div class="pt-2">
+                <a class="btn btn-success btn-xl js-scroll-trigger" href="">Starved?</a>
+            </div>
+
         </div>
-      </div>
+        <!-- Jumbotron -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 
+    </div>
 
-    <!-- footer -->
-    <footer id="sticky-footer" class="py-4 bg-dark text-white-50 rounded-top">
-      <div class="container text-center">
-        <small>Copyright &copy; Famished</small>
-      </div>
-    </footer>
+    <!-- Food Filter -->
+    <div class="row">
+        <div class="jumbotron text-center col-lg-10 mx-auto bg-transparent">
+
+            <div class="card" id="food-filter">
+
+                <div class="col-lg-10 mx-auto">
+                    <h2>Food Filter</h2>
+                    <p class="lead mb-5">Pick out your food prefences here!</p>
+                </div>
+
+                <div class="card-body px-lg-5 pt-0">
+
+                    <form class="md-form" style="color: transparent;">
+
+
+
+                        <div>
+                            <select class="mdb-select md-form text-dark initialized" id="select">
+                                <option value="" disabled selected>Choose your option</option>
+                                <option value="Gluten Free">Gluten Free</option>
+                                <option value="Plant  Based">Plant Based</option>
+                                <option value="Nut Free">Nut Free</option>
+                                <option value="Vegan">Vegan</option>
+                                <option value="Keto">Keto</option>
+                                <option value="Keto">Dairy Free</option>
+                            </select>
+
+                        </div>
+
+                        <label for="input"></label>
+                        <input type="text" id="input" class="form-control w-25" placeholder="Other">
+                        <br>
+
+                        <p class="card-text lead mb-5">Calorie Range</p>
+                        <div class="slidecontainer">
+
+                            <input type="range" class="custom-range w-25" min="100" max="5000" step="0.5"
+                                id="myRange" />
+                            <p class="demo">Up to: <span id="demo"></span> calories</p>
+
+                            <label for="input"></label>
+                            <input type="text" id="input" class="form-control w-25" placeholder="Zip Code">
+                        </div>
+
+
+
+                        <!-- <div class="d-flex justify-content-between">
+                                <div>
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+                                        <label class="custom-control-label" for="defaultLoginFormRemember">Remember my prefences</label>
+                                    </div>
+                                </div>
+
+                        </div> -->
+
+
+                        <a class="btn btn-success btn-xl js-scroll-trigger" href="">Searching for Food</a>
+
+                        <div class="text-center">
+
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <!-- Card -->
+    <div class="row">
+        <div class="card col-lg-10 mx-auto">
+
+            <!-- Change this to map  -->
+            <div id="map-container-google-9" class="z-depth-1-half map-container-5" style="height: 300px">
+                <iframe src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                    style="border:0" allowfullscreen></iframe>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body container text-center">
+
+                <!-- Title -->
+                <h2 class="card-title"><a>Good News!</a></h2>
+                <!-- Text -->
+                <p class="card-text lead mb-5">We found you some food!</p>
+
+                <!--Table-->
+                <table id="tablePreview" class="table table-striped table-hover table-sm">
+                    <!--Table head-->
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name of Item</th>
+                            <th>Location</th>
+                            <th>Website</th>
+                            <th>Learn More</th>
+                        </tr>
+                    </thead>
+                    <!--Table head-->
+                    <!--Table body-->
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><a class="btn btn-success btn-xl js-scroll-trigger" href="">Learn More</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><a class="btn btn-success btn-xl js-scroll-trigger" href="">Learn More</a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><a class="btn btn-success btn-xl js-scroll-trigger" href="">Learn More</a></td>
+                        </tr>
+                    </tbody>
+                    <!--Table body-->
+                </table>
+                <!--Table-->
+
+
+
+                <!-- Button -->
+                <a class="btn btn-success btn-xl js-scroll-trigger" href="">All Set</a>
+
+            </div>
+
+        </div>
+    </div>
+    <!-- Card -->
+
+
+
+
+
+
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.9.7/d3.min.js"></script>
     <script src="assets/javascript/main.js" type="text/javascript"></script>
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
 </body>
-=======
-
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.9.7/d3.min.js"></script>
-  <script src="assets/javascript/main.js" type="text/javascript"></script>
-</body>
+</html>
