--- a/index3.html
+++ b/index3.html
@@ -285,3 +285,4 @@
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
 </body>
+</html>
