updated js, search button works

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <hr class="my-4">
 
             <div class="pt-2">
-                <a class="btn btn-success btn-xl js-scroll-trigger" href="">Starved?</a>
+                <button class="btn btn-success btn-xl js-scroll-trigger" id="foodFilter">Starved?</button>
             </div>
 
         </div>
@@ -120,7 +120,7 @@
     <div class="row">
         <div class="jumbotron text-center col-lg-10 mx-auto bg-transparent">
 
-            <div class="card" id="food-filter">
+            <div class="card" id="foodFilter">
 
                 <div class="col-lg-10 mx-auto">
                     <h2>Food Filter</h2>
@@ -141,7 +141,7 @@
                                 <option value="Nut Free">Nut Free</option>
                                 <option value="Vegan">Vegan</option>
                                 <option value="Keto">Keto</option>
-                                <option value="Keto">Dairy Free</option>
+                                <option value="Dairy Free">Dairy Free</option>
                             </select>
 
                         </div>
@@ -174,7 +174,7 @@
                         </div> -->
 
 
-                        <a class="btn btn-success btn-xl js-scroll-trigger" href="">Searching for Food</a>
+                        <button class="btn btn-success btn-xl js-scroll-trigger" id="searchButton">Searching for Food</button>
 
                         <div class="text-center">
 
@@ -219,7 +219,6 @@
                             <th>#</th>
                             <th>Name of Item</th>
                             <th>Location</th>
-                            <th>Website</th>
                             <th>Learn More</th>
                         </tr>
                     </thead>
@@ -252,7 +251,7 @@
                 </table>
                 <!--Table-->
 
-
+                <div id="foo"></div>
 
                 <!-- Button -->
                 <a class="btn btn-success btn-xl js-scroll-trigger" href="">All Set</a>
