Added text replacing latin

--- a/index2.html
+++ b/index2.html
@@ -84,10 +84,15 @@
                 <!-- Grid column -->
                 <div class="col-xl-7 pb-2">
 
-                    <p class="card-text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aliquid dolorem
-                        ea distinctio exercitationem delectus qui, quas eum architecto, amet quasi accusantium, fugit
-                        consequatur ducimus obcaecati numquam molestias hic itaque accusantium doloremque laudantium,
-                        totam rem aperiam.</p>
+                    <p class="card-text-white">Are you Famished? Withering away from lack of food throughout your day? Willing to explore the horizons of your palate? Then FAMISHED is the way to go.
+
+ Famished is a convenient way for you to see what’s around!
+
+We cater to all types of eating, ranging from steakhouse’s to vegan restaurants and everything in between.
+
+How to use: Type in what you’re feeling. Plot where you want. And win by eating
+
+Napoleon B: “Veni, vidi, vici. I came, I saw, I conquered”</p>
 
                 </div>
                 <!-- Grid column -->
