--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 
             <!-- Change this to map  -->
             <div id="map-container-google-9" class="z-depth-1-half map-container-5" style="height: 300px">
-                <iframe src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                    style="border:0" allowfullscreen></iframe>
+                    <iframe width="600" height="450" frameborder="0" style="border:0"
+                    src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJK-0sC0Fl1oYRFccWTTgtw3M&key=AIzaSyA6MRuoTNuPK7uTCFuq_DqFMkxHMvC-zzU" allowfullscreen></iframe>
             </div>
 
             <!-- Card content -->
