cleaned up code on html and added summary from Issac

--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
                 <!-- brief description of website -->
                 <div class="col-xl-7 pb-2">
 
-                    <p class="card-text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga aliquid
-                        dolorem
-                        ea distinctio exercitationem delectus qui, quas eum architecto, amet quasi accusantium, fugit
-                        consequatur ducimus obcaecati numquam molestias hic itaque accusantium doloremque laudantium,
-                        totam rem aperiam.</p>
+                    <p class="text-white" id="summary">Are you Famished? Withering away from lack of food throughout your day?  <br>
+                         Willing to explore the horizons of your palate? Then FAMISHED is the way to go. <br>
+                            We accomodate to all types of eating, ranging from steakhouse’s to vegan restaurants and everything in between. <br>
+                            How to use: Type in what you’re feeling. Plot where you want. And win by eating! <br>
+                            Napoleon B: “Veni, vidi, vici. I came, I saw, I conquered”
+                    </p>
 
                 </div>
                 <!-- Gbrief description of website -->
@@ -114,7 +115,7 @@
                 <button class="btn btn-success btn-xl js-scroll-trigger" id="foodFilter">Starved?</button>
             </div>
             <!-- get started button to go to food filter form -->
-            
+
         </div>
         <!-- Jumbotron -->
 
