--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container">
             <a class="navbar-brand white-text" href="#">Famished</a>
@@ -191,7 +190,7 @@
                         </div> -->
 
 
-                        <button class="btn btn-success btn-xl js-scroll-trigger" id="searchButton">Searching for Food</button>
+                        <a class="btn btn-success btn-xl js-scroll-trigger" id="searchButt">Searching for Food</a>
 
                         <div class="text-center">
 
@@ -241,7 +240,7 @@
                     </thead>
                     <!--Table head-->
                     <!--Table body-->
-                    <tbody>
+                    <tbody class="mainhead">
                         <tr>
                             <th scope="row">1</th>
                             <td></td>
