--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    
+
     <!-- reset css link, so site looks same across browsers -->
     <link rel="stylesheet" href="assets/css/reset.css">
 
@@ -39,6 +39,21 @@
 
 
 </head>
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Food Information</h4>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -158,19 +173,19 @@
                             <input type="range" class="custom-range w-25" min="100" max="5000" step="0.5"
                                 id="myRange" />
                             <p class="demo">Up to: <span id="demo"></span> calories</p>
-                            
+
                             <script type="text/javascript">
-                               // put script inline to test
+                                // put script inline to test
 
                                 // first, we have the calorie range slider to work with
                                 var slider = document.getElementById('myRange')
-                                 var output = document.getElementById('demo')
+                                var output = document.getElementById('demo')
                                 output.innerHTML = slider.value
 
-                                slider.oninput = function() {
-                                output.innerHTML = this.value
-                                console.log(this.value) // this works!
-                             }
+                                slider.oninput = function () {
+                                    output.innerHTML = this.value
+                                    console.log(this.value) // this works!
+                                }
                             </script>
 
                             <label for="input"></label>
@@ -215,8 +230,9 @@
 
             <!-- Change this to map  -->
             <div id="map-container-google-9" class="z-depth-1-half map-container-5" style="height: 300px">
-                    <iframe width="600" height="450" frameborder="0" style="border:0"
-                    src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJK-0sC0Fl1oYRFccWTTgtw3M&key=AIzaSyA6MRuoTNuPK7uTCFuq_DqFMkxHMvC-zzU" allowfullscreen></iframe>
+                <iframe width="600" height="450" frameborder="0" style="border:0"
+                    src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJK-0sC0Fl1oYRFccWTTgtw3M&key=AIzaSyA6MRuoTNuPK7uTCFuq_DqFMkxHMvC-zzU"
+                    allowfullscreen></iframe>
             </div>
 
             <!-- Card content -->
@@ -300,4 +316,5 @@
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
 </body>
+
 </html>
