--- a/index.html
+++ b/index.html
@@ -267,7 +267,24 @@
                     <!--Table body-->
                 </table>
                 <!--Table showing results of selected items-->
-
+                
+                <nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
                 <div id="foo"></div>
 
                 <!--Button should reset page back to Home/Beginning of page -->
