--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                         </div>
                     </div>
                        <!--------------------------  MODAL --------------------------------------------->
-                       <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#infoModal"
-                       data-whatever="@mdo">More Info</button> --> 
+                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#infoModal"
+                       data-whatever="@mdo">More Info</button> 
                    </div>
                    <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel"
                      aria-hidden="true">
@@ -223,7 +223,7 @@
                          <div class="modal-body">
                            <form>
                              <div class="form-group">
-                               <label for="train-name" class="col-form-label">Calories:</label>
+                               <label for="calories" class="col-form-label">Calories:</label>
                                <input type="text" class="form-control" id="calories">
                              </div>
                              <div class="form-group">
