--- a/index.html
+++ b/index.html
@@ -140,14 +140,7 @@
         <!-- Jumbotron -->
 
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        
     </div>
 
     </div>
@@ -293,18 +286,13 @@
     </div>
     </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    
 
     <!-- Card -->
     <div class="row">
-        <div id="mapid">MAP GOES HERE</div>
+        <!-- using google maps embed API -->
+        <iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJK-0sC0Fl1oYRFccWTTgtw3M&key=AIzaSyBHJoUICa4QltXCnuuyI92Q9RXeJUzUJ4M " allowfullscreen></iframe>
 
 
 
