fixed input text color on food filter and changed some words and spacing in summary

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                         Willing to explore the horizons of your palate? Then FAMISHED is the way to go. <br>
                         We accomodate all types of eating, from steakhouses to vegan treats and restaurants and
                         everything in between. <br><br>
-                        <strong>How to use: Type in what you’re feeling. Plot where you want. And win by
+                        <strong>How it works: &nbsp 1: Type in what you’re feeling. &nbsp 2: Plot where you want. &nbsp
+                            3: Win by
                             eating!</strong> <br><br>
 
                     </p>
@@ -188,7 +189,7 @@
                         <!-- option to type food in text field, not on pre selected dropdown -->
                         <div class="col"></div>
                         <!-- <label for="input"></label> -->
-                        <input type="text" id="input" class="form-control w-25 font-style white-text"
+                        <input type="text" id="input" class="form-control w-25 font-style text-white"
                             placeholder="Other">
                         <!-- option to type food in text field, not on pre selected dropdown -->
 
@@ -217,7 +218,8 @@
                                 </script>
 
                                 <!-- <label for="input"></label> -->
-                                <input type="text" id="zip" class="form-control w-25 font-style" placeholder="Zip Code">
+                                <input type="text" id="zip" class="form-control w-25 font-style text-white"
+                                    placeholder="Zip Code">
                                 <!-- search button for food and zip code entered -->
                                 <a class="btn btn-success btn-xl js-scroll-trigger waves-effect waves-light buttonFont"
                                     id="searchButt" href="#location">Search for
