--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <!-- pre selected food option drop down menu -->
                         <div>
                             <select class="mdb-select md-form text-dark initialized font-style" id="select">
-                                <option value="choose">Choose</option>
+                                <option value="choose">Dietery Options</option>
                                 <option value="Gluten Free">Gluten Free</option>
                                 <option value="Plant  Based">Plant Based</option>
                                 <option value="Nut Free">Nut Free</option>
@@ -183,7 +183,7 @@
                         <!-- option to type food in text field, not on pre selected dropdown -->
                         <div class="col"></div>
                         <!-- <label for="input"></label> -->
-                        <input type="text" id="input" class="form-control w-25 font-style" placeholder="Other">
+                        <input type="text" id="input" class="form-control w-25 font-style" placeholder="What do you crave?">
                         <!-- option to type food in text field, not on pre selected dropdown -->
 
                         <br>
